ci: Setting up basic CI workflow.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,3 +6,7 @@ jobs:
             - image: cimg/node:18
         steps:
             - run: yarn test
+workflows:
+    unit-testing:
+        jobs:
+            - unit-test
