--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
             - image: cimg/node:18.12
         steps:
             - checkout
+            - run: yarn install
             - run: yarn test
 workflows:
     unit-testing:
